# oracle_google_python_cloud

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  readme
gmail/: .gitignore  GMAIL.PY  api.py  utube.py
oracle/: create_instance.py  instance.py  list_instance.py  ora.py  ora2.py  pyproject.toml
templates/: index.html
