[project]
name = "oraclescripts"
version = "0.1.0"
description = "Oracle create instances and read instances"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "oci>=2.163.1",
    "ruff>=0.14.7",
]

[tool.hatch.build.targets.sdist]
only-include = ["oracle"]
[build.targets.wheel]
packages = ["oracle"]
